syntax = "proto3";

package profile;

service ProfileGRPCService{
  rpc CreateProfile(CreateProfileDto) returns (Profile) {}
  rpc GetProfileByUserId(UserId) returns (Profile) {}
  rpc GetBatchProfiles(UserIds) returns (ProfilesArray) {}
}

message CreateProfileDto {
  string userId = 1;
  string name = 2;
  string gender = 3;
}

message UserId {
  string userId = 1;
}

message UserIds {
  repeated string userIds = 1;
}

message Profile {
  int32 id = 1;
  string name = 2;
  string gender = 3;
  string user_id = 4;
}

message ProfilesArray {
  repeated Profile profiles = 1;
}